UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_RCA_IPA_LINE__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>RCA IPA LINES</relationshipLabel>
        <relationshipName>RCA_IPA_LINES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contact_Phone_External__c</fullName>
        <label>Contact Phone External</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RCA IPA LINES</relationshipLabel>
        <relationshipName>RCA_IPA_LINES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Comments__c</fullName>
        <label>Contract Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Sent to Customer</fullName>
                </value>
                <value>
                    <fullName>Line Error- Not Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Contracts_Final_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Final Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_GPO__c</fullName>
        <label>Current GPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahold Indirect Contract</fullName>
                </value>
                <value>
                    <fullName>Intalere</fullName>
                </value>
                <value>
                    <fullName>Asembia</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>Innovatix</fullName>
                </value>
                <value>
                    <fullName>MedAssets</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>MMCAP</fullName>
                </value>
                <value>
                    <fullName>Vizient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>PACT</fullName>
                </value>
                <value>
                    <fullName>ROi</fullName>
                </value>
                <value>
                    <fullName>The Resource Group</fullName>
                </value>
                <value>
                    <fullName>CHPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Wholesaler__c</fullName>
        <label>Current Wholesaler</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AmerisourceBergen</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>ASD Specialty Healthcare</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
                <value>
                    <fullName>Morris &amp; Dickson</fullName>
                </value>
                <value>
                    <fullName>HD Smith</fullName>
                </value>
                <value>
                    <fullName>Anda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RCA IPA LINES</relationshipLabel>
        <relationshipName>RCA_IPA_LINES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_DEA__c</fullName>
        <label>DEA#</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Final_Status__c</fullName>
        <label>Final Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_GLN__c</fullName>
        <label>GLN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_HIN__c</fullName>
        <label>HIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_GPO__c</fullName>
        <label>New GPO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahold Indirect Contract</fullName>
                </value>
                <value>
                    <fullName>Intalere</fullName>
                </value>
                <value>
                    <fullName>Asembia</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>Innovatix</fullName>
                </value>
                <value>
                    <fullName>MedAssets</fullName>
                </value>
                <value>
                    <fullName>MHA</fullName>
                </value>
                <value>
                    <fullName>MMCAP</fullName>
                </value>
                <value>
                    <fullName>Vizient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>PACT</fullName>
                </value>
                <value>
                    <fullName>ROi</fullName>
                </value>
                <value>
                    <fullName>The Resource Group</fullName>
                </value>
                <value>
                    <fullName>CHPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_New_RCA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New RCA / IPA Contract No.</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>RCA IPA LINES (New RCA Agreement)</relationshipLabel>
        <relationshipName>RCA_IPA_LINES1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Parent_IPA_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent IPA Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RCA IPA LINES (Parent IPA Customer)</relationshipLabel>
        <relationshipName>RCA_IPA_LINES1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_RAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RCA_IPA_LINES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RCA / IPA Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>RCA IPA LINES</relationshipLabel>
        <relationshipName>RCA_IPA_LINES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_RCA_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Street_Name__c</fullName>
        <label>Street # / Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Wholesaler_Location__c</fullName>
        <label>New Wholesaler Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Phoenix_Wholesaler__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amityville, NY</fullName>
                </value>
                <value>
                    <fullName>Anchorage, AK</fullName>
                </value>
                <value>
                    <fullName>Atlanta, GA</fullName>
                </value>
                <value>
                    <fullName>Auburn, WA</fullName>
                </value>
                <value>
                    <fullName>Aurora, CO</fullName>
                </value>
                <value>
                    <fullName>Aurora, IL</fullName>
                </value>
                <value>
                    <fullName>Bethlehem, PA</fullName>
                </value>
                <value>
                    <fullName>Birmingham, AL</fullName>
                </value>
                <value>
                    <fullName>Boston, MA</fullName>
                </value>
                <value>
                    <fullName>Buffalo, NY</fullName>
                </value>
                <value>
                    <fullName>Carol Stream, IL</fullName>
                </value>
                <value>
                    <fullName>Carson, CA</fullName>
                </value>
                <value>
                    <fullName>Chicago, IL</fullName>
                </value>
                <value>
                    <fullName>Clear Lake, IA</fullName>
                </value>
                <value>
                    <fullName>Columbus, OH</fullName>
                </value>
                <value>
                    <fullName>Conroe, TX</fullName>
                </value>
                <value>
                    <fullName>Corona, CA</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Delran, NJ</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Detroit, MI</fullName>
                </value>
                <value>
                    <fullName>Elk Grove, CA</fullName>
                </value>
                <value>
                    <fullName>Everett, WA</fullName>
                </value>
                <value>
                    <fullName>Flower Mound, TX</fullName>
                </value>
                <value>
                    <fullName>Greensboro, NC</fullName>
                </value>
                <value>
                    <fullName>Groveport, OH (NLC)</fullName>
                </value>
                <value>
                    <fullName>Hawaii, HI</fullName>
                </value>
                <value>
                    <fullName>Honolulu, HI</fullName>
                </value>
                <value>
                    <fullName>Houston, TX</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Wholesaler__c</fullName>
        <label>New Wholesaler Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AmerisourceBergen</fullName>
                </value>
                <value>
                    <fullName>HPG</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Novation</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>ASD Specialty Healthcare</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
                <value>
                    <fullName>Morris &amp; Dickson</fullName>
                </value>
                <value>
                    <fullName>HD Smith</fullName>
                </value>
                <value>
                    <fullName>Anda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>RCA IPA LINE</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>RCA IPA LINE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RCA IPA LINES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>